@@ -1,5 +1,14 @@
 2015-01-20  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlbase.c: (gst_ttmlbase_uri_get),
+	(gst_ttmlbase_get_type):
+	* src/gstttmlrender.c: (gst_ttmlrender_decode_image_from_buffer),
+	(gst_ttmlrender_retrieve_image):
+	Fix a couple of small string leaks, and one big downloaded-image-buffer
+	leak.
+
+2015-01-20  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmldownloader.c: (gst_ttml_downloader_download):
 	Fix gcc warning.
 
